Separation of bone from multiple selected armatures in multiobject edit mode creates junk armature #72310

Closed
opened 2019-12-09 18:47:49 +01:00 by Cirno · 3 comments

System Information
Operating system: Windows-8.1-6.3.9600 64 Bits
Graphics card: GeForce GT 730/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.12

Blender Version
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-12-04 11:32, hash: f1aa4d18d4
Worked: (optional)

Short description of error
When multiple armatures are selected in edit mode, then separating a bone from one armature creates empty junk armatures

Exact steps for others to reproduce the error

  1. Here 4 armature objects are selected and I enter multiobject edit mode
    KqIrg2t.png
  2. I select bone from third armature, press P - separate
  3. Bone will be separated, but in the process of it blender will create junk armature objects without bones. Like it tries to separate from other armatures too and separates "nothing"

Before:
KBmcUbS.png
After:
359TJgW.png
SeparationBug.blend

**System Information** Operating system: Windows-8.1-6.3.9600 64 Bits Graphics card: GeForce GT 730/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.12 **Blender Version** Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-12-04 11:32, hash: `f1aa4d18d4` Worked: (optional) **Short description of error** When multiple armatures are selected in edit mode, then separating a bone from one armature creates empty junk armatures **Exact steps for others to reproduce the error** 1. Here 4 armature objects are selected and I enter multiobject edit mode ![KqIrg2t.png](https://archive.blender.org/developer/F8202627/KqIrg2t.png) 2. I select bone from third armature, press P - separate 3. Bone will be separated, but in the process of it blender will create junk armature objects without bones. Like it tries to separate from other armatures too and separates "nothing" Before: ![KBmcUbS.png](https://archive.blender.org/developer/F8202629/KBmcUbS.png) After: ![359TJgW.png](https://archive.blender.org/developer/F8202632/359TJgW.png) [SeparationBug.blend](https://archive.blender.org/developer/F8202637/SeparationBug.blend)
Author

Added subscriber: @Lambdadelta

Added subscriber: @Lambdadelta

This issue was referenced by 8bf7ca9fe3

This issue was referenced by 8bf7ca9fe31c438c68e6765666ce890a192ad765

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Campbell Barton self-assigned this 2019-12-09 20:59:49 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72310
No description provided.