Fix T72310: Separate bones creates empty armatures

Armatures that didn't contain any selected bones were still
creating armatures.